# touchless

./: .gitignore  AGENTS.md  README.md  cursor_controller.py  gestures.py  hand_detector.py  index.html  main.py  package-lock.json  package.json  requirements.txt  sidecar.py  tracker.py  voice_sidecar.swift
scripts/: build_sidecar.py  build_voice_sidecar.py  download_model.py  install_app.py
src/: main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_cursor_controller.py  test_gestures.py  test_sidecar_integration.py  test_tracker.py
