[package]
name = "touchless"
version = "0.1.0"
description = "Touchless gesture cursor control"
authors = ["Touchless"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
